--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="C:\Users\USER\OneDrive\Bureau\fb.css">
+    <link rel="stylesheet" href="fb.css">
     <title>Facebook - Connexion ou inscription</title>  
     <link rel="icon" type="image/x-icon" href="https://cdn.icon-icons.com/icons2/2429/PNG/512/facebook_logo_icon_147291.png">
 </head>
 
 <header>
-    <img src="C:\Users\USER\OneDrive\Bureau\back.png" class="backbtn">
+    <img src="back.png" class="backbtn">
     <p class="language">Français (France)</p>
 </header>
 
 <body>
     <div class="container">
-        <img src="C:\Users\USER\OneDrive\Bureau\facebook-logo.png" alt="Facebook.png" class="logo">
+        <img src="facebook-logo.png" alt="Facebook.png" class="logo">
     </div>
 
     <div class="login-container">
